--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,194 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* default */
+html{
+  font-size: 62.5%;
+    box-sizing: border-box;
+}
+body{
+  background-color: #3B3636;
+  color: #707070;
+}
+/* colors */
+.c-text-danger{
+  color: #BF0000;
+}
+.c-text-success{
+  color: #1EBF07;
+}
+.c-text-light{
+  color: #FFFFFF;
+}
+.c-text-warning{
+  color: #DCE922;
+}
+.c-text-muted{
+  color: #707070;
+}
+.c-text-dark{
+  color: #3B3636;
+}
+/* background colors */
+.c-bg-danger{
+  background-color: #BF0000;
+}
+.c-bg-success{
+  background-color: #1EBF07;
+}
+.c-bg-light{
+  background-color: #FFFFFF;
+}
+.c-bg-warning{
+  background-color: #DCE922;
+}
+.c-bg-muted{
+  background-color: #707070;
+}
+.c-bg-dark{
+  background-color: #3B3636;
+}
+/* text size */
+.c-font-1{
+  font-size: 1rem;
+}
+.c-font-2{
+  font-size: 2rem;
+}
+.c-font-3{
+  font-size: 3rem;
+}
+.c-font-4{
+  font-size: 4rem;
+}
+.c-font-5{
+  font-size: 5rem;
+}
+/* margin */
+.c-m-1{
+  margin: 1rem;
+}
+.c-m-2{
+  margin: 2rem;
+}
+.c-m-3{
+  margin: 3rem;
+}
+.c-m-4{
+  margin: 4rem;
+}
+.c-m-5{
+  margin: 5rem;
+}
+/* margin bottom */
+.c-mb-1{
+  margin-bottom: 1rem;
+}
+.c-mb-2{
+  margin-bottom: 2rem;
+}
+.c-mb-3{
+  margin-bottom: 3rem;
+}
+.c-mb-4{
+  margin-bottom: 4rem;
+}
+.c-mb-5{
+  margin-bottom: 5rem;
+}
+/* margin top */
+.c-mt-1{
+  margin-top: 1rem;
+}
+.c-mt-2{
+  margin-top: 2rem;
+}
+.c-mt-3{
+  margin-top: 3rem;
+}
+.c-mt-4{
+  margin-top: 4rem;
+}
+.c-mt-5{
+  margin-top: 5rem;
+}
+/* form */
+.c-form-control{
+  max-width: 28rem;
+  min-height: 5rem;
+  border-radius: .5rem;
+  border: .1rem solid;
+  color: #707070;
+  background-color: transparent;
+  display: block;
+  text-align: center;
+}
+.c-form-group{
+  display: flex;
+  justify-content: center;
+}
+/* button */
+.button{
+  min-width: 12rem;
+  max-width: 12rem;
+  min-height: 5rem;
+  max-height: 5rem;
+  color: #DCE922;
+  background-color: transparent;
+  border: .1rem solid;
+  cursor: pointer;
+}
+.button-muted{
+  min-width: 12rem;
+  max-width: 12rem;
+  min-height: 5rem;
+  max-height: 5rem;
+  color: #707070;
+  background-color: transparent;
+  border: .1rem solid;
+  cursor: pointer;
+}
+.button-danger{
+  min-width: 12rem;
+  max-width: 12rem;
+  min-height: 5rem;
+  max-height: 5rem;
+  color: #BF0000;
+  background-color: transparent;
+  border: .1rem solid;
+  cursor: pointer;
+}
+.button-md{
+  min-width: 8rem;
+  max-width: 8rem;
+  min-height: 5rem;
+  max-height: 5rem;
+  color: #DCE922;
+  background-color: transparent;
+  border: .1rem solid;
+  cursor: pointer;
+}
+.button-sm{
+  min-width: 6rem;
+  max-width: 6rem;
+  min-height: 5rem;
+  max-height: 5rem;
+  color: #DCE922;
+  background-color: transparent;
+  border: .1rem solid;
+  cursor: pointer;
+  font-size: 1.5rem;
+}
+/* animes */
+.animes{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* help messages */
+.helpId{
+  margin: 1rem;
+  text-align: center;
+}
+/* border */
+.c-border{
+  border: .1rem solid #707070;
 }
